--- a/_posts/2025-09-04-Day-3.md
+++ b/_posts/2025-09-04-Day-3.md
@@ -4,4 +4,6 @@ date: 2025-09-04 22:34:30 +0000
 
 Today I've continued my way through bash terminal commands, linux concepts and system administration skills
 
+I've created a beautiful doc file in my portfolio about some of the most usefull linux terminal commands with their relative description and exemple. Check it out here : [60 Greatest Bash Commands](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio/blob/main/docs/linux-terminal-commands.md)
+
 ---
