pages update and more

--- a/_posts/2025-09-02-Day-1.md
+++ b/_posts/2025-09-02-Day-1.md
@@ -2,13 +2,18 @@ layout: post
 title: "Day 1 : Introduction to my journey"
 date: 2025-09-02 15:00:00 +0000
 
-# 🚀 DevOps & Cloud Blog ☁️
+Welcome everyone to my Daily Blog! 👋
 
-Welcome to my DevOps & Cloud Blog! 👋
+Okay, here we go again !
+Day one of becoming a DevOps, what should i get into ?
+So first of all I made a new public repository to share all my current and future work named as simple as : [DevOps Cloud Portfolio](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio)
+I wanted to create straight of, a space where all of my projects, my documentation, my tools and all of the different things I work with during my learning process. I think that this is a great thing to start with because it will be a good exemple of my progression but also a sign of my determination, my discipline and real hands on project for my future interviews. 
+Then I also created a complete RoadMap so I can go straight forward from one point to another with clear goals, skills and projects : [The Great RoadMap](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio/blob/main/ROADMAP.md)
 
-I'm actively working towards becoming a **DevOps Cloud Engineer**. Here, I share my daily progress through hands-on, real-world projects—covering automation, CI/CD, containerization, cloud infrastructure, and more. 
-Today is my very first day of this adventure and so here we go !
+Now that I have all of this setup, I think that it's time to work !
 
-Day 1 : getting back to linux
+Week 1 Day 1 : getting back to linux
+
+
 
 ---
