--- a/_posts/2025-09-03-Day-2.md
+++ b/_posts/2025-09-03-Day-2.md
@@ -5,6 +5,8 @@ date: 2025-09-03 23:49:30 +0000
 ## Week 1: Linux Fundamentals & Networking Basics
 **Theme**: System Administration Foundation
 
+To begin my journey, of course I couldn't go around Linux. All modern cloud, operating systems, servers and more run on linux. Even though I'm already really familiar with it thanks to my 42 cursus, I thought that it will be a great thing to review my knowledge and my skills of it. So let's go !
+
 ### Learning Objectives
 - Master Linux CLI for daily DevOps tasks
 - Understand networking fundamentals
