much more updates about me

--- a/_posts/2025-09-02-Day-1.md
+++ b/_posts/2025-09-02-Day-1.md
@@ -1,19 +1,13 @@
 layout: post
-title: "Day 1 : Introduction to my journey"
+title: "Day 1: Setting the Stage for My DevOps Journey"
 date: 2025-09-02 15:00:00 +0000
 
-Welcome everyone to my Daily Blog! 👋
+Welcome to the very first entry of my DevOps & Cloud Blog! 👋
 
-Okay, here we go again !
-Day one of becoming a DevOps, what should i get into ?
-So first of all I made a new public repository to share all my current and future work named as simple as : [DevOps Cloud Portfolio](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio)
-I wanted to create straight of, a space where all of my projects, my documentation, my tools and all of the different things I work with during my learning process. I think that this is a great thing to start with because it will be a good exemple of my progression but also a sign of my determination, my discipline and real hands on project for my future interviews. 
-Then I also created a complete RoadMap so I can go straight forward from one point to another with clear goals, skills and projects : [The Great RoadMap](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio/blob/main/ROADMAP.md)
+As a programmer trained at 42 Nice, I already have a strong background in Linux and the terminal. My first day was all about getting back into the SysAdmin mindset, revisiting essential shell skills, and laying the groundwork for my DevOps adventure.
 
-Now that I have all of this setup, I think that it's time to work !
+Today, I focused on setting up my learning environment and mapping out the path ahead. I explored what it truly means to become a DevOps Engineer, the skills I’ll need to master, and the challenges I’m excited to tackle. This blog will serve as my daily log, where I’ll share progress, insights, and resources as I grow in the world of DevOps.
 
-Week 1 Day 1 : getting back to linux
-
-
+Let the journey begin!
 
 ---
