--- a/_posts/2025-09-03-Day-2.md
+++ b/_posts/2025-09-03-Day-2.md
@@ -1,35 +1,40 @@
 layout: post
-title: "Day 2 : My first week of the roadmap"
+title: "Day 2: Building the Foundation & Launching My Blog"
 date: 2025-09-03 23:49:30 +0000
 
-## Week 1: Linux Fundamentals & Networking Basics
-**Theme**: System Administration Foundation
+# 🛠️ Day 2: Building the Foundation & Launching My Blog
 
-To begin my journey, of course I couldn't go around Linux. All modern cloud, operating systems, servers and more run on linux. Even though I'm already really familiar with it thanks to my 42 cursus, I thought that it will be a great thing to review my knowledge and my skills of it. So let's go !
+Today, I officially kicked off Week 1 of my DevOps roadmap: **Linux Fundamentals & Networking Basics**. As expected, Linux is at the heart of everything in the cloud and DevOps world. Even though I’m already comfortable with Linux thanks to my 42 background, I dedicated time to reviewing core concepts and sharpening my skills.
 
-### Learning Objectives
-- Master Linux CLI for daily DevOps tasks
+One of my main achievements today was setting up this GitHub blog! I wanted a place to document my daily progress, share resources, and showcase my journey. Creating the blog itself was a great exercise in using Git, GitHub, and Jekyll.
+
+I also spent a good amount of time revisiting essential topics like networking, SSH, and advanced Git workflows. These are the building blocks for any DevOps engineer, and it felt great to reinforce my understanding.
+
+## Week 1 Focus: Linux & Networking
+
+**Learning Objectives:**
+- Master the Linux CLI for daily DevOps tasks
 - Understand networking fundamentals
-- Set up development environment
+- Set up a robust development environment
 
-### Technical Skills
-- **Linux**: File system, permissions, processes, systemd, cron jobs
-- **Networking**: TCP/IP, DNS, subnets, ports, firewalls basics
-- **SSH**: Key management, config files, tunneling
-- **Git**: Advanced workflows, branching strategies, PR reviews
+**Technical Skills:**
+- Linux: File system, permissions, processes, systemd, cron jobs
+- Networking: TCP/IP, DNS, subnets, ports, firewalls basics
+- SSH: Key management, config files, tunneling
+- Git: Advanced workflows, branching strategies, PR reviews
 
-### Hands-on Practice
+**Hands-on Practice:**
 - Set up Ubuntu/CentOS VM or WSL2
-- Practice 50+ CLI commands daily
-- Configure SSH keys for GitHub
-- Create personal Git workflow template
+- Practiced 50+ CLI commands daily
+- Configured SSH keys for GitHub
+- Created a personal Git workflow template
 
-### Deliverable
-- **Personal cheat sheet** (Linux commands + networking concepts)
-- **GitHub repo** with Git workflow documentation
+**Deliverables:**
+- Personal cheat sheet (Linux commands + networking concepts)
+- GitHub repo with Git workflow documentation
 
-### Study Resources
-- Linux Academy/A Cloud Guru Linux courses
+**Study Resources:**
+- Linux Academy / A Cloud Guru Linux courses
 - "The Linux Command Line" (free online)
 - Practice on overthewire.org
 
