--- a/_posts/2025-09-04-Day-3.md
+++ b/_posts/2025-09-04-Day-3.md
@@ -1,11 +1,13 @@
 layout: post
-title: "Day 3 : Linux fundamentals"
+title: "Day 3: Mastering Essential Shell Commands"
 date: 2025-09-04 22:34:30 +0000
 
-Today I've continued my way through bash terminal commands, linux concepts and system administration skills
+# 💻 Day 3: Mastering Essential Shell Commands
 
-I've created a beautiful doc file in my portfolio about some of the most usefull terminal commands with their relative description and exemple. Check it out here : [60 Greatest Bash Commands](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio/blob/main/docs/linux-terminal-commands.md)
+Today, I dove deep into the world of shell commands, focusing on the most important and powerful tools every DevOps engineer should know. I spent hours practicing, experimenting, and refining my command-line skills—an absolute must for anyone serious about system administration and automation.
 
-I think that if i want to be a great DevOps it's almost impossible to don't know well linux, shell and the fundamental concepts of system administration. So that's why during this first week I was so deep inside learning more about it !
+To help others (and my future self), I created a comprehensive documentation file in my DevOps Cloud Portfolio, listing the 60 most useful bash commands with descriptions and examples. Check it out here: [60 Greatest Bash Commands](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio/blob/main/docs/linux-terminal-commands.md)
+
+Mastering Linux, the shell, and core system administration concepts is non-negotiable for a successful DevOps career. That’s why I’m dedicating so much time this week to going deeper and building a rock-solid foundation.
 
 ---
