--- a/_posts/2025-09-02-Day-1.md
+++ b/_posts/2025-09-02-Day-1.md
@@ -6,8 +6,17 @@ date: 2025-09-02 15:00:00 +0000
 
 Welcome to the very first entry of my DevOps & Cloud Blog! 👋
 
-As a programmer trained at 42 Nice, I already have a strong background in Linux and the terminal. My first day was all about getting back into the SysAdmin mindset, revisiting essential shell skills, and laying the groundwork for my DevOps adventure.
+This first day is all about creating all the necessary elements to keep track of my progression, to set the approriate goals and to set my roadmap on track.
 
-Today, I focused on setting up my learning environment and mapping out the path ahead. I explored what it truly means to become a DevOps Engineer, the skills I’ll need to master, and the challenges I’m excited to tackle. This blog will serve as my daily log, where I’ll share progress, insights, and resources as I grow in the world of DevOps.
+Alright so, even if you can find my full roadmap here : [My DevOps Roadmap](https://github.com/Vlad-PLK/DevOps-Cloud-Portfolio/blob/main/ROADMAP.md)
+
+My main goals and the ones in my eyes that i really want to achieve are : 
+- Mastering Linux, Shell and terminal
+- Become even better at Docker, Docker-Compose and deploy my own full webpage on my own server using a docker architecture for all my services
+- Learn Kubernetes and create my first "home-lab" using some of my VMs and physical hardware
+- Learn AWS and then deploy my previous webpage on cloud fully
+- Finnally I want to achieve the following certification to launch my freelance work : AWS Solutions Architect Associate and Certified Kubernetes Administrator
+
+Now we can dive into the very first week : Linux Fundamentals & Networking Basics !
 
 Let the journey begin!
